--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "immer": "^9.0.16",
     "next": "13.0.6",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
